--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -25,5 +25,26 @@
         android:summary="@string/heads_up_notifications_summary"
         android:defaultValue="true" />
 
+  <PreferenceCategory
+        android:title="@string/breathing_notifications_category" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="sms_breath"
+        android:title="@string/sms_breath_title"
+        android:summary="@string/sms_breath_summary"
+        android:persistent="false"/>
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="missed_call_breath"
+        android:title="@string/missed_call_breath_title"
+        android:summary="@string/missed_call_breath_summary"
+        android:persistent="false"/>
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="voicemail_breath"
+        android:title="@string/voicemail_breath_title"
+        android:summary="@string/voicemail_breath_summary"
+        android:persistent="false"/>
+
 </PreferenceScreen>
 
