--- a/res/xml/statusbar_breathing.xml
+++ b/res/xml/statusbar_breathing.xml
@@ -15,4 +15,22 @@
     android:key="breathing_settings"
     android:title="@string/statusbar_breathing_title">
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="sms_breath"
+            android:title="@string/sms_breath_title"
+            android:summary="@string/sms_breath_summary"
+            android:persistent="false"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="missed_call_breath"
+            android:title="@string/missed_call_breath_title"
+            android:summary="@string/missed_call_breath_summary"
+            android:persistent="false"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="voicemail_breath"
+            android:title="@string/voicemail_breath_title"
+            android:summary="@string/voicemail_breath_summary"
+            android:persistent="false"/>
+
 </PreferenceScreen>
