Add kill button to notification guts [2/2]
Change-Id: Iece5fc25791cb8735603e1a469c7bc1bfa2e8802

--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -59,6 +59,12 @@
         android:title="@string/screenshot_type_title"
         android:defaultValue="0" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="notification_guts_kill_app_button"
+        android:title="@string/notification_guts_kill_app_button_title"
+        android:summary="@string/notification_guts_kill_app_button_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory 
         android:title="@string/corners_category" />
 
