Allow to swap volume buttons rotation based [2/2]
Change-Id: I75f9f6c2c8197454365bb0efc9dbcb89689e1e25

--- a/res/xml/buttons_volume.xml
+++ b/res/xml/buttons_volume.xml
@@ -27,4 +27,10 @@
         android:summary="@string/vol_zen_summary"
         android:defaultValue="false"/>
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="swap_volume_buttons"
+        android:title="@string/swap_volume_buttons_title"
+        android:summary="@string/swap_volume_buttons_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
