--- a/res/xml/buttons_volume.xml
+++ b/res/xml/buttons_volume.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    xmlns:blissns="http://schemas.android.com/apk/res-auto">
 
     <Preference 
         android:key="bliss_logo"
@@ -32,5 +35,15 @@
         android:title="@string/swap_volume_buttons_title"
         android:summary="@string/swap_volume_buttons_summary"
         android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+        android:key="volume_dialog_timeout"
+        android:title="@string/volume_dialog_timeout_title"
+        android:min="500"
+        android:max="10000"
+        android:defaultValue="3000"
+        blissns:interval="100"
+        settings:unitsLeft=""
+        settings:unitsRight="ms" />
 
 </PreferenceScreen>
