--- a/res/xml/system_animation.xml
+++ b/res/xml/system_animation.xml
@@ -89,4 +89,24 @@
             android:summary="@string/power_menu_animation_summary"
             android:persistent="false" />
 
+    <PreferenceCategory
+         android:key="listview_animations"
+         android:title="@string/listview_ani_title" />
+
+        <ListPreference
+            android:key="listview_animation"
+            android:dialogTitle="@string/listview_animation_title"
+            android:title="@string/listview_animation_title"
+            android:entries="@array/listview_animation_entries"
+            android:entryValues="@array/listview_animation_values"
+            android:defaultValue="0" />
+
+        <ListPreference
+            android:key="listview_interpolator"
+            android:dialogTitle="@string/listview_interpolator_title"
+            android:title="@string/listview_interpolator_title"
+            android:entries="@array/listview_interpolator_entries"
+            android:entryValues="@array/listview_interpolator_values"
+            android:defaultValue="0" />
+
 </PreferenceScreen>
