--- a/res/xml/buttons_main.xml
+++ b/res/xml/buttons_main.xml
@@ -14,11 +14,13 @@
                 android:fragment="com.blissroms.blissify.fragments.buttons.NavBar"
                 />
 
-	<PreferenceScreen
+     <PreferenceScreen
 		android:fragment="com.android.settings.smartnav.NavigationBarSettings"
 		android:key="navigationbar_settings"
-                android:icon="@drawable/ic_navbar"
-		android:title="@string/navigationbar_settings_title"/>
+                android:icon="@drawable/ic_smartnav"
+		android:title="@string/navigationbar_settings_title"
+                android:summary="@string/buttons_smartbar_summary"
+                />
 
      <PreferenceScreen
                 android:id="@+id/buttons_power"
@@ -34,6 +36,14 @@
                 android:summary="@string/buttons_volume_summary"
                 android:icon="@drawable/ic_volume"
                 android:fragment="com.blissroms.blissify.fragments.buttons.Volume"
+                />
+
+     <PreferenceScreen
+                android:id="@+id/buttons_hwkeys"
+                android:title="@string/buttons_hwkeys_title"
+                android:summary="@string/buttons_hwkeys_summary"
+                android:icon="@drawable/ic_hardware_keys"
+                android:fragment="com.blissroms.blissify.fragments.buttons.HWKeys"
                 />
 
 
