--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -105,6 +105,22 @@
         android:entryValues="@array/switch_style_values"
         android:summary="%s"
         android:defaultValue="0" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="dashboard_icons"
+        android:icon="@drawable/ic_bliss_themes"
+        android:title="@string/theming_settings_dashboard_icons_title">
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="theming_settings_dashboard_icons"
+        android:title="@string/theming_settings_dashboard_icons_title"
+        android:dialogTitle="@string/theming_settings_dashboard_icons_title"
+        android:entries="@array/theming_settings_dashboard_icons_entries"
+        android:entryValues="@array/theming_settings_dashboard_icons_values"
+        android:summary="%s"
+        android:defaultValue="0" />
     </PreferenceCategory>
 
 </PreferenceScreen>
