Theme settings dashboard icons [3/3]
Change-Id: I3807af9027b2dcf1ddb8a19fb9531ebd534fc13a

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1661,4 +1661,11 @@
     <string name="switch_narrow">Narrow</string>
     <string name="switch_contained">Contained</string>
     <string name="switch_telegram">Telegram</string>
+
+    <!-- Settings dashboard icon style -->
+    <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
+    <string name="theming_settings_dashboard_icons_default">Round (default)</string>
+    <string name="theming_settings_dashboard_icons_default_accent">Round accent</string>
+    <string name="theming_settings_dashboard_icons_plain">Plain</string>
+    <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
 </resources>
