--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -16,6 +16,15 @@
      </Preference>
 
      <Preference
+         android:key="device_extras_category"
+         android:title="@string/device_extras_title"
+         android:summary="@string/device_extras_summary" >
+         <intent android:action="com.android.settings.action.EXTRA_SETTINGS"
+            android:targetPackage="com.dirtyunicorns.settings.device"
+            android:targetClass="com.dirtyunicorns.settings.device.TouchscreenGestureSettings" />
+     </Preference>
+
+     <Preference
         android:key="smart_pixels"
         android:title="@string/smart_pixels_title"
         android:summary="@string/smart_pixels_summary"
