--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -20,4 +20,24 @@
             android:defaultValue="0"
             android:entryValues="@array/recents_component_type_title_values"/>
 
+    <PreferenceCategory
+        android:key="clearall_recents_category"
+        android:title="@string/clearall_recents_category"/>
+
+         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="show_clear_all_recents"
+            android:title="@string/show_clear_all_recents_button_title"
+            android:summary="@string/show_clear_all_recents_button_summary"
+            android:dependency="recents_component"
+            android:defaultValue="true" />
+
+         <com.blissroms.blissify.preference.SystemSettingListPreference
+            android:key="recents_clear_all_location"
+            android:title="@string/recents_clear_all_location_title"
+            android:dialogTitle="@string/recents_clear_all_location_title"
+            android:entries="@array/recents_clear_all_location_entries"
+            android:entryValues="@array/recents_clear_all_location_values"
+            android:dependency="show_clear_all_recents"
+            android:defaultValue="3" />
+
 </PreferenceScreen>
