--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -27,6 +27,15 @@
             android:dependency="recents_component"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SystemSettingListPreference
+            android:key="immersive_recents"
+            android:title="@string/immersive_recents_title"
+            android:summary="@string/immersive_recents_summary"
+            android:dialogTitle="@string/immersive_recents_dialog_title"
+            android:entries="@array/immersive_recents_entries"
+            android:entryValues="@array/immersive_recents_values"
+            android:defaultValue="0" />
+
     <PreferenceCategory
         android:key="clearall_recents_category"
         android:title="@string/clearall_recents_category"/>
