--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -20,11 +20,14 @@
             android:defaultValue="0"
             android:entryValues="@array/recents_component_type_title_values"/>
 
+    <PreferenceCategory 
+        android:title="@string/recent_button_title"
+        android:key="stock_recents" >
+
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="systemui_recents_mem_display"
             android:title="@string/recents_show_membar_title"
             android:summary="@string/recents_show_membar_summary"
-            android:dependency="recents_component"
             android:defaultValue="false" />
 
         <com.blissroms.blissify.preference.SystemSettingListPreference
@@ -36,15 +39,16 @@
             android:entryValues="@array/immersive_recents_values"
             android:defaultValue="0" />
 
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="clearall_recents_category"
-        android:title="@string/clearall_recents_category"/>
+        android:title="@string/clearall_recents_category">
 
          <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="show_clear_all_recents"
             android:title="@string/show_clear_all_recents_button_title"
             android:summary="@string/show_clear_all_recents_button_summary"
-            android:dependency="recents_component"
             android:defaultValue="true" />
 
          <com.blissroms.blissify.preference.SystemSettingListPreference
@@ -55,5 +59,7 @@
             android:entryValues="@array/recents_clear_all_location_values"
             android:dependency="show_clear_all_recents"
             android:defaultValue="3" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
