--- a/res/xml/buttons_power.xml
+++ b/res/xml/buttons_power.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <Preference 
         android:key="bliss_logo"
@@ -17,5 +19,27 @@
         android:summary="@string/lockscreen_power_menu_disabled_summary"
         android:dependency="advanced_reboot"
         android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:title="@string/panel_porn_title">
+		
+        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+            android:key="transparent_power_menu"
+            android:title="@string/power_menu_transparency"
+            android:max="100"
+            android:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="%"
+            android:defaultValue="100" />
+			
+        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+            android:key="transparent_power_dialog_dim"
+            android:title="@string/power_menu_dialog_dim"
+            android:max="100"
+            android:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight="%"
+            android:defaultValue="50" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
