qs brightness slider enhancements [2/2]
add switch for brightness buttons

Change-Id: If0747d8ac79ce708ec59253bb297206dc684f259

--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -34,6 +34,13 @@
             android:dependency="qs_show_brightness_slider"
             android:defaultValue="false"/>
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="qs_show_brightness_buttons"
+            android:title="@string/brightness_buttons_title"
+            android:summary="@string/brightness_buttons_summary"
+            android:dependency="qs_show_brightness_slider"
+            android:defaultValue="false"/>
+
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="qs_show_info_header"
             android:title="@string/qs_show_info_header_title"
