Implement App circle sidebar [2/2]
Change-Id: I002d2e8dfc54e0d4ba2f9e0c19aeb1bda053e8f4

--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -15,6 +15,13 @@
         android:fragment="com.blissroms.blissify.fragments.gestures.CarbonGesturesSettings" />
 
     <Preference
+        android:key="app_circle_bar"
+        android:title="@string/app_circle_bar_title"
+        android:summary="@string/app_circle_bar_summary"
+        android:icon="@drawable/ic_gestures"
+        android:fragment="com.blissroms.blissify.fragments.gestures.AppCircleBar" />
+
+    <Preference
         android:title="@string/doubletap_gestures_title"
         android:summary="@string/doubletap_gestures_summary"
         android:icon="@drawable/ic_gestures"
