--- a/res/layout/preference_app_list.xml
+++ b/res/layout/preference_app_list.xml
@@ -27,6 +27,7 @@
         android:id="@+id/app_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null" />
+        android:layout_marginBottom="6dip"
+        android:layout_marginTop="6dip" />
 </LinearLayout>
 
