--- a/res/xml/app_circlebar.xml
+++ b/res/xml/app_circlebar.xml
@@ -19,6 +19,10 @@
     xmlns:benzo="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/app_circle_bar_title" >
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="enable_app_circle_bar"
         android:title="@string/app_circle_bar_enable_title"
