Implement animations for back edge gestures [2/2]
Change-Id: I1f911c25e1ce3cdbd97d58b03909e1a2de961b54

--- a/res/xml/edge_gestures.xml
+++ b/res/xml/edge_gestures.xml
@@ -63,6 +63,12 @@
             settings:units="%"
             android:defaultValue="60" />
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+            android:key="edge_gestures_back_show_ui_feedback"
+            android:title="@string/edge_gestures_back_show_ui_feedback_title"
+            android:summary="@string/edge_gestures_back_show_ui_feedback_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
