--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -29,6 +29,13 @@
         android:icon="@drawable/ic_appcirclebar"
         android:fragment="com.blissroms.blissify.fragments.gestures.AppCircleBar" />
 
+    <Preference
+        android:key="gesture_anywhere"
+        android:title="@string/gesture_anywhere_title"
+        android:summary="@string/gesture_anywhere_summary"
+        android:icon="@drawable/ic_gestures"
+        android:fragment="com.blissroms.blissify.fragments.gestureanywhere.GestureAnywhereSettings" />
+
     <Preference 
         android:key="edge_gestures" 
         android:title="@string/edge_gestures_title" 
