--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1678,6 +1678,7 @@
         <item>@string/qstile_dottedcircle</item>
         <item>@string/qstile_attemptmountain</item>
         <item>@string/qstile_squaremedo</item>
+        <item>@string/qstile_inkdrop</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1691,6 +1692,7 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
     </string-array>
 
 </resources>
