--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -220,4 +220,38 @@
         android:summary="@string/vol_zen_summary"
         android:defaultValue="false"/>
 
+   <PreferenceCategory
+        android:title="@string/audio_panel_view">
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_media"
+            android:title="@string/audio_panel_view_media_title"
+            android:defaultValue="true"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_ringer"
+            android:title="@string/audio_panel_view_ringer_title"
+            android:defaultValue="false"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_notification"
+            android:title="@string/audio_panel_view_notification_title"
+            android:defaultValue="false"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_alarm"
+            android:title="@string/audio_panel_view_alarm_title"
+            android:defaultValue="false"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_voice"
+            android:title="@string/audio_panel_view_voice_title"
+            android:defaultValue="false"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="audio_panel_view_bt_sco"
+            android:title="@string/audio_panel_view_bt_sco_title"
+            android:defaultValue="false"/>
+    </PreferenceCategory>
+
 </PreferenceScreen>
