Allow devices override audio panel location [2/2]
Change-Id: I1b86840a427a11994b83a5da1f9beeb4384b6a40
SDB: Add a SystemUI Restart Dialog as it's needed for volume panel to change place

--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -184,6 +184,12 @@
         settings:unitsRight="ms" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="volume_panel_on_left"
+        android:title="@string/volume_panel_on_left_title"
+        android:summary="@string/volume_panel_on_left_summary"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="screen_shot_shortcut"
         android:title="@string/screen_shot_shortcut"
         android:summaryOn="@string/screen_shot_shortcut_on"
