--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1476,4 +1476,27 @@
         <item>ffff6700</item>
     </string-array>
 
+    <!-- Slim recents -->
+    <string-array name="recent_panel_expanded_mode_entries">
+        <item>@string/recent_panel_expanded_mode_auto</item>
+        <item>@string/recent_panel_expanded_mode_always</item>
+        <item>@string/recent_panel_expanded_mode_never</item>
+        <item>@string/recent_panel_expanded_mode_disabled</item>
+    </string-array>
+    <string-array name="recent_panel_expanded_mode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="slim_recents_enter_exit_animation_entries" translatable="false">
+        <item>@string/slim_recents_enter_exit_animation_translate</item>
+        <item>@string/slim_recents_enter_exit_animation_fade</item>
+    </string-array>
+    <string-array name="slim_recents_enter_exit_animation_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
