--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -22,6 +22,23 @@
         android:key="bliss_header"
         android:layout="@layout/more_header" />
 
+    <PreferenceCategory
+        android:key="alternative_recents_category"
+        android:title="@string/alternative_recents_category">
+
+    <Preference
+        android:key="swipe_up_enabled_warning"
+        android:selectable="false"
+        android:summary="@string/alternative_recents_swipe_up_enabled_warning_summary" />
+
+    <com.bliss.support.preferences.SystemSettingMasterSwitchPreference
+        android:key="use_slim_recents"
+        android:fragment="com.blissroms.blissify.fragments.misc.SlimRecents"
+        android:title="@string/slim_recents_fragment_title"
+        android:summary="@string/slim_recents_fragment_summary"/>
+
+    </PreferenceCategory>
+
     <!-- Agressive battery -->
     <PreferenceCategory
         android:key="aggressive_battery"
