Blissify: Add OnePlus dashboard icons [2/2]
Signed-off-by: Saikiran <bjsaikiran@gmail.com>
Change-Id: I5918fac0eb9c5427bf00ed43ef4e98e7509e878d

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1788,6 +1788,7 @@
         <item>@string/theming_settings_dashboard_icons_default_accent</item>
         <item>@string/theming_settings_dashboard_icons_plain</item>
         <item>@string/theming_settings_dashboard_icons_plain_accent</item>
+        <item>@string/theming_settings_dashboard_icons_default_oneplus</item>
     </string-array>
 
     <string-array name="theming_settings_dashboard_icons_values" translatable="false">
@@ -1795,6 +1796,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- QS Tile Tint -->
