--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1673,6 +1673,7 @@
     <string name="theming_settings_dashboard_icons_default_accent">Round accent</string>
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
+    <string name="theming_settings_dashboard_icons_default_oneplus">OnePlus</string>
 
     <!-- StatusBar notification count -->
     <string name="notif_count_title">Notification count</string>
