--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -293,6 +293,13 @@
         android:key="volume_keys"
         android:title="@string/hardware_keys_volume_keys_title" >
 
+        <!-- Audio Panel view  -->
+        <PreferenceScreen
+            android:key="volume_panel"
+            android:title="@string/audio_panel_view_title"
+            android:summary="@string/audio_panel_view_summary"
+            android:fragment="com.blissroms.blissify.fragments.buttons.VolumePanel" />
+
         <Preference
             android:key="vol_steps"
             android:title="@string/volume_steps_title"
