--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -52,6 +52,19 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="display_cutout_category"
+        android:title="@string/cutout_main">
+
+    <Preference
+        android:key="cutout_settings"
+        android:title="@string/cutout_main"
+        android:summary="@string/cutout_main_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.CutoutFragment" />
+
+    </PreferenceCategory>
+
+
     <!-- Agressive battery 
     <PreferenceCategory
         android:key="aggressive_battery"
