--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -35,6 +35,13 @@
             android:summary="@string/lockscreen_visualizer_enable_summary"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+            android:key="ambient_visualizer"
+            android:title="@string/ambient_visualizer_title"
+            android:summary="@string/ambient_visualizer_summary"
+            android:dependency="lockscreen_visualizer_enabled"
+            android:defaultValue="false" />
+
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="lock_screen_visualizer_use_custom_color"
             android:title="@string/lockscreen_visualizer_enable_custom"
