Introduce lockscreen clock/date styles [2/2]
Change-Id: Ie9c31814003760b685fb9669099316388ceb5b46

--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -11,17 +11,24 @@
         android:key="ls_clock"
         android:title="@string/ls_clock" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-        android:key="lockscreen_clock"
-        android:title="@string/lockscreen_clock_title"
-        android:summary="@string/lockscreen_clock_summary"
-        android:defaultValue="true" />
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_clock"
+            android:title="@string/lockscreen_clock_title"
+            android:summary="@string/lockscreen_clock_summary"
+            android:defaultValue="true" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-        android:key="lockscreen_info"
-        android:title="@string/lockscreen_info_title"
-        android:summary="@string/lockscreen_info_summary"
-        android:defaultValue="true" />
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_info"
+            android:title="@string/lockscreen_info_title"
+            android:summary="@string/lockscreen_info_summary"
+            android:defaultValue="true" />
+
+        <com.blissroms.blissify.preference.SystemSettingListPreference
+            android:key="lockscreen_clock_selection"
+            android:title="@string/lockscreen_clock_selection_title"
+            android:entries="@array/lockscreen_clock_selection_entries"
+            android:entryValues="@array/lockscreen_clock_selection_values"
+            android:defaultValue="0" />
 
          <ListPreference
             android:key="lock_clock_fonts"
