Volume rocker music control switch
Change-Id: I24696d22606170d5aa337d9b99948e3af4ffa723

--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -168,6 +168,12 @@
         android:title="@string/buttons_volume_title"/>
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:title="@string/volume_rocker_music_controls_title"
+        android:summary="@string/volume_rocker_music_controls_summary"
+        android:defaultValue="true" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="swap_volume_buttons"
         android:title="@string/swap_volume_buttons_title"
         android:summary="@string/swap_volume_buttons_summary"
