Add in lockscreen security preference
Change-Id: I04b092aa0f80baea7fd51358fe4a018e64af9074

--- a/res/xml/lockscreen_main.xml
+++ b/res/xml/lockscreen_main.xml
@@ -16,4 +16,12 @@
                 android:fragment="com.blissroms.blissify.fragments.lockscreen.LockUI"
                 />
 
+     <PreferenceScreen
+                android:id="@+id/lockscreen_security"
+                android:title="@string/lockscreen_sec_title"
+                android:summary="@string/lockscreen_sec_summary"
+                android:icon="@drawable/ic_system"
+                android:fragment="com.blissroms.blissify.fragments.lockscreen.LockSecurity"
+                />
+
 </PreferenceScreen>
