--- a/res/xml/lockscreen_security.xml
+++ b/res/xml/lockscreen_security.xml
@@ -13,4 +13,10 @@
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="face_auto_unlock"
+        android:title="@string/face_auto_unlock_title"
+        android:summary="@string/face_auto_unlock_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
