--- a/res/xml/lockscreen_security.xml
+++ b/res/xml/lockscreen_security.xml
@@ -19,4 +19,10 @@
         android:summary="@string/face_auto_unlock_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference 
+        android:key="hide_lock_shortcuts" 
+        android:title="@string/lockscreen_hide_shortcuts_title" 
+        android:summary="@string/lockscreen_hide_shortcuts_summary" 
+        android:defaultValue="false" />
+
 </PreferenceScreen>
