--- a/res/xml/lockscreen_security.xml
+++ b/res/xml/lockscreen_security.xml
@@ -25,4 +25,10 @@
         android:summary="@string/lockscreen_hide_shortcuts_summary" 
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="status_bar_locked_on_secure_keyguard"
+        android:title="@string/block_on_secure_keyguard_title"
+        android:summary="@string/block_on_secure_keyguard_summary"
+        android:defaultValue="false"/>
+
 </PreferenceScreen>
