--- a/res/xml/lockscreen_security.xml
+++ b/res/xml/lockscreen_security.xml
@@ -13,6 +13,12 @@
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference  
+        android:key="fp_unlock_keystore" 
+        android:title="@string/fp_unlock_keystore_title" 
+        android:summary="@string/fp_unlock_keystore_summary" 
+        android:defaultValue="false" />
+
     <com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="face_auto_unlock"
         android:title="@string/face_auto_unlock_title"
