Update battery options
Change-Id: Idb49771ba8f48615cbe10d96acb2edfa467bdf6e

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -17,16 +17,15 @@
 
 <resources>
 
-    <!-- Battery customizations -->
+    <!-- Battery styles -->
     <string-array name="status_bar_battery_style_entries" translatable="false">
         <item>@string/battery_style_port</item>
         <item>@string/battery_style_circle</item>
         <item>@string/battery_style_dotted_circle</item>
         <item>@string/battery_style_big_circle</item>
         <item>@string/battery_style_big_dotted_circle</item>
-        <!--<item>@string/battery_style_square</item>
-        <item>@string/battery_style_dotted_square</item> -->
         <item>@string/battery_style_text</item>
+        <item>@string/battery_style_hidden</item>
     </string-array>
 
     <string-array name="status_bar_battery_style_values" translatable="false">
@@ -34,10 +33,9 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>7</item>
         <item>5</item>
-        <!--<item>6</item>
-        <item>7</item> -->
-        <item>8</item>
+        <item>6</item>
     </string-array>
 
     <!-- Battery circle percent -->
