--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -17,7 +17,7 @@
             android:defaultValue="0" />
 
         <ListPreference
-            android:key="show_battery_percent"
+            android:key="status_bar_show_battery_percent"
             android:title="@string/show_battery_percent_title"
             android:entries="@array/battery_percent_entries"
             android:entryValues="@array/battery_percent_values" />
