Add ability to toggle bluetooth battery level [2/2]
Change-Id: Ibb97c552f8ac1d24f7de0919a7a658601169d45a

--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -12,6 +12,12 @@
          android:title="@string/statusbar_icons_cat"/>
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="bluetooth_show_battery"
+            android:title="@string/bluetooth_battery_title"
+            android:summary="@string/bluetooth_battery_summary"
+            android:defaultValue="true" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="statusbar_show_wifi_activity"
             android:title="@string/statusbar_show_wifi_activity_title"
             android:summary="@string/statusbar_show_wifi_activity_summary"
