Add weather alternative to ambient bottom view [2/2]
Change-Id: Ieeb95f1a3304af9fe6908b0ecf3821c11c1e553d

--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -91,6 +91,14 @@
             android:summary="@string/lockscreen_battery_info_summary"
             android:defaultValue="true" />
 
+        <com.blissroms.blissify.preference.SystemSettingIntListPreference
+            android:key="ambient_bottom_display"
+            android:entries="@array/ambient_display_bottom_info_entries"
+            android:entryValues="@array/ambient_display_bottom_info_values"
+            android:title="@string/ambient_display_bottom_info_title"
+            android:summary="%s"
+            android:defaultValue="0" />
+
      <PreferenceCategory
          android:key="ls_weather"
          android:title="@string/lockscreen_weather_cat"/>
