--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1083,4 +1083,17 @@
         <item>16</item>
     </string-array>
 
+    <!-- Ambient Display Bottom info -->
+    <string-array name="ambient_display_bottom_info_entries" translatable="false">
+        <item>@string/ambient_display_bottom_info_off</item>
+        <item>@string/ambient_display_bottom_info_battery</item>
+        <item>@string/ambient_display_bottom_info_weather</item>
+    </string-array>
+
+    <string-array name="ambient_display_bottom_info_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
