--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -82,6 +82,12 @@
         android:title="@string/panel_options" />
 
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+	    android:key="qs_show_drag_handle"
+	    android:title="@string/tuner_show_drag_handle_title"
+	    android:summary="@string/tuner_show_drag_handle_summary"
+	    android:defaultValue="true" />
+
+        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
