Create QS header pref screen in quic settings tab
Change-Id: I23cfbb01e7c2db11a9a8cc6aac672f475d169855

--- a/res/xml/qs_main.xml
+++ b/res/xml/qs_main.xml
@@ -16,4 +16,12 @@
                 android:fragment="com.blissroms.blissify.fragments.qs.Panel"
                 />
 
+     <PreferenceScreen
+                android:id="@+id/qs_header"
+                android:title="@string/qs_header_title"
+                android:summary="@string/qs_header_summary"
+                android:icon="@drawable/ic_items"
+                android:fragment="com.blissroms.blissify.fragments.qs.Header"
+                />
+
 </PreferenceScreen>
