--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1096,4 +1096,14 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="custom_header_provider_entries" translatable="false">
+        <item>@string/daylight_header_provider_title</item>
+        <item>@string/file_header_provider_title</item>
+    </string-array>
+
+    <string-array name="custom_header_provider_values" translatable="false">
+        <item>@string/daylight_header_provider</item>
+        <item>@string/file_header_provider</item>
+    </string-array>
+
 </resources>
